Trying to get workflow running on slurm with idr